# apate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  apate.sln
.github/workflows/: release.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/moe/sakurajimamai/apate/: FileAccess.kt  FileName.kt  MainActivity.kt  NativeBridge.kt  NativeModels.kt  RestoreModels.kt  Theme.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/values-night/: styles.xml
android/app/src/test/java/moe/sakurajimamai/apate/: FileNameTest.kt  NativeResultTest.kt
apate/: AboutUI.Designer.cs  AboutUI.cs  ApateUI.Designer.cs  ApateUI.cs  ApateUI.resx  InfoBox.Designer.cs  InfoBox.cs  ModeEnum.cs  Program.cs  apate.csproj
apate/Properties/: Resources.Designer.cs  Resources.resx
crates/apate-android-jni/: Cargo.toml
crates/apate-android-jni/src/: lib.rs
crates/apate-cli/: Cargo.toml
crates/apate-cli/src/: gui.rs  main.rs
crates/apate-cli/tests/: android_project.rs  cli.rs  release_workflow.rs  rust_only_repo.rs  tui.rs
crates/apate-core/: Cargo.toml
crates/apate-core/src/: lib.rs
crates/apate-core/tests/: format_roundtrip.rs  legacy_format.rs
docs/: ARCHITECTURE.md  README.md  api-reference.md  cli-reference.md  user-guide.md
docs/superpowers/specs/: 2026-06-15-rust-single-binary-tui-release-design.md
skills/apate-cli/: SKILL.md
