[package]
name = "apate-android-jni"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "apate_android"
crate-type = ["cdylib", "rlib"]

[dependencies]
apate-core = { path = "../apate-core" }
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
